--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,7 @@ system:
 zap:
   level: info
   format: console
-  prefix: '[newbee_mall]'
+  prefix: '[bookstore_mall]'
   director: log
   showLine: true
   encode-level: LowercaseColorLevelEncoder
